// Vitest Snapshot v1

exports[`field value test 1`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): TextFieldValue {
    "props": {
      "value": "hello",
    },
  },
}
`;

exports[`field value test 2`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): NumberFieldValue {
    "props": {
      "value": 1,
    },
  },
}
`;

exports[`field value test 3`] = `
OptionType {
  Symbol(T): false,
  Symbol(Val): undefined,
}
`;